--- a/frontEnd/src/app/pages/home-page/home-page.component.html
+++ b/frontEnd/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,26 @@
-<p>home-page works!</p>
+
+<div style="font-size: 30px" *ngIf="conferences.length === 0; else conferencesExist">
+  <i>No conferences at the moment. Come back soon!</i>
+</div>
+
+
+<ng-template #conferencesExist>
+  <mat-tab-group dynamicHeight [(selectedIndex)]="selectedTabIndex">
+    <mat-tab *ngFor="let conference of conferences" label="{{conference.name}}">
+      <app-conference [conference]="conference"></app-conference>
+    </mat-tab>
+  </mat-tab-group>
+
+  <br/>
+  <button mat-raised-button
+          id="goto-button"
+          color="accent"
+          *ngIf="selectedTabIndex !== null"
+          (click)="goToConferenceSite()">
+    Go to conference site
+  </button>
+</ng-template>
+
+
+  
+  
