--- a/frontEnd/src/app/pages/tab-details/tab-details.component.html
+++ b/frontEnd/src/app/pages/tab-details/tab-details.component.html
@@ -1,1 +1,10 @@
-<p>tab-details works!</p>
+<ng-container *ngIf="conference.id">
+    <app-conference [conference]="conference"></app-conference>
+    <br><br>
+    <button mat-flat-button
+            color="warn"
+            *ngIf="canEditDeadlines()">
+      Edit deadlines
+    </button>
+  </ng-container>
+  
