--- a/frontEnd/src/app/pages/tab-results/tab-results.component.html
+++ b/frontEnd/src/app/pages/tab-results/tab-results.component.html
@@ -1,1 +1,53 @@
-<p>tab-results works!</p>
+<h1>Until the evaluation deadline, you will know the results of your submissions</h1>
+
+<div class="submissions">
+  <ng-container *ngFor="let submission of submissionsReviewed;let i = index;">
+    <mat-card [ngClass]="chooseColorClass(submission)" [matTooltip]="chooseMessageTooltip(submission)">
+      <mat-card-header>
+        <div mat-card-avatar class="submission-header-image"></div>
+        <mat-card-title>{{submission.title}}</mat-card-title>
+      </mat-card-header>
+      <br>
+      <mat-card-content>
+        <p>
+          <span class="field">Abstract: </span>
+          <i *ngIf="submission.abstractPaper; then thenAbstractBlock else elseAbstractBlock"></i>
+          <ng-template #thenAbstractBlock> <span class="downloadSpan" (click)="downloadAbstractPaper(i)">
+              Click to download</span></ng-template>
+          <ng-template #elseAbstractBlock>none</ng-template>
+        </p>
+        <p>
+          <span class="field">Authors: </span>
+          <ng-container *ngFor="let author of submission.authors;let j = index">
+            {{author.fullName}}<span *ngIf="j < submission.authors.length-1">,</span>
+          </ng-container>
+        </p>
+        <p><span class="field">Topics: </span>{{submission.topics}}</p>
+        <p><span class="field">Keywords: </span>{{submission.keywords}}</p>
+        <p>
+          <span class="field">Fullpaper: </span>
+          <i *ngIf="submission.fullPaper; then thenFullpaperBlock else elseFullpaperBlock">none</i>
+          <ng-template #thenFullpaperBlock> <span class="downloadSpan" (click)="downloadFullPaper(i)">
+              Click here to download</span></ng-template>
+          <ng-template #elseFullpaperBlock>none</ng-template>
+        </p>
+        <hr>
+        <b>Reviews: </b>
+        <i *ngIf="!submission.reviews.length">none</i>
+        <ng-container *ngIf="submission.finalVerdict"> <!-- Aista ii ala cu galben-->
+          <i id="final-verdict">{{submission.finalVerdict}}</i>
+        </ng-container>
+        <br>
+        <ng-container *ngFor="let review of submission.reviews">
+          <i>{{review.verdict}}</i>, {{review.user.fullName}}<br>
+        </ng-container>
+      </mat-card-content>
+
+      <mat-card-actions *ngIf="isAccepted(submission)">
+        <button mat-raised-button color="accent" (click)="openRecommendations(submission)" [matTooltip]="'The program committee offers some improvements before you present in front of all.'">
+          Improve paper
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </ng-container>
+</div>
