--- a/frontEnd/src/app/pages/tab-reviewing/tab-reviewing.component.html
+++ b/frontEnd/src/app/pages/tab-reviewing/tab-reviewing.component.html
@@ -1,1 +1,108 @@
-<p>tab-reviewing works!</p>
+<div class="columns-container">
+    <div class="reviewed submissions">
+      <h1>Your reviews: </h1>
+      <div class="empty-list-message" *ngIf="this.reviews.length === 0 && this.reviewsOthers.length === 0">
+        There are no reviews. Wait for Chair/Co-Chair to assign you papers.
+      </div>
+      <ng-container>
+        <mat-card class="reviewed submission-card" *ngFor="let review of getReviewedSubmissions(); let i = index">
+          <mat-card-header>
+            <div mat-card-avatar class="submission-header-image"></div>
+            <mat-card-title>{{review.submission.title}}</mat-card-title>
+            <mat-card-subtitle>Review no.{{i + 1}}</mat-card-subtitle>
+          </mat-card-header>
+          <br>
+          <mat-card-content>
+            <p>
+              <span class="field">Abstract: </span>
+              <i *ngIf="review.submission.abstractPaper; then thenAbstractBlock else elseAbstractBlock"></i>
+              <ng-template #thenAbstractBlock> <span class="downloadSpan" (click)="downloadAbstractPaper(i)">
+                Click to download</span></ng-template>
+              <ng-template #elseAbstractBlock>none</ng-template>
+            </p>
+            <p>
+              <span class="field">Authors: </span>
+              <ng-container *ngFor="let author of review.submission.authors;let j = index">
+                {{author.fullName}}<span *ngIf="j < review.submission.authors.length-1">,</span>
+              </ng-container>
+            </p>
+            <p><span class="field">Topics: </span>{{review.submission.topics}}</p>
+            <p><span class="field">Keywords: </span>{{review.submission.keywords}}</p>
+            <p>
+              <span class="field">Fullpaper: </span>
+              <i *ngIf="this.review.submission.fullPaper; then thenFullpaperBlock else elseFullpaperBlock">none</i>
+              <ng-template #thenFullpaperBlock> <span class="downloadSpan" (click)="downloadFullPaper(i)">
+                Click here to download</span></ng-template>
+              <ng-template #elseFullpaperBlock>none</ng-template>
+            </p>
+          </mat-card-content>
+  
+          <mat-card-actions>
+            <mat-label style="right:50%;">
+              <b style="margin:0 15px;">{{review.verdict}}</b>
+              <!--        ngSwitch for custom color aspect?-->
+            </mat-label>
+            <button mat-raised-button color="accent"
+                    (click)="showRecommendations(review.submission, review.recommendation)">
+              See other reviews
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </ng-container>
+    </div>
+  
+    <div class="unreviewed submissions">
+      <h1 class="flex-headers">Please review the following:</h1>
+      <ng-container>
+        <mat-card class="unreviewed submission-card" *ngFor="let review of getUnreviewedSubmissions(); let i = index">
+          <mat-card-header>
+            <div mat-card-avatar class="submission-header-image" matTooltip="Icon Nr.1"></div>
+            <mat-card-title>{{review.submission.title}}</mat-card-title>
+            <mat-card-subtitle>Unreviewed no.{{i + 1}}</mat-card-subtitle>
+          </mat-card-header>
+          <mat-card-content>
+            <p>
+              <span class="field">Abstract: </span>
+              <i *ngIf="review.submission.abstractPaper; then thenAbstractBlock else elseAbstractBlock"></i>
+              <ng-template #thenAbstractBlock> <span class="downloadSpan" (click)="downloadAbstractPaper(review)">
+                Click to download</span></ng-template>
+              <ng-template #elseAbstractBlock>none</ng-template>
+            </p>
+            <p>
+              <span class="field">Authors: </span>
+              <ng-container *ngFor="let author of review.submission.authors;let j = index">
+                {{author.fullName}}<span *ngIf="j < review.submission.authors.length-1">,</span>
+              </ng-container>
+            </p>
+            <p><span class="field">Topics: </span>{{review.submission.topics}}</p>
+            <p><span class="field">Keywords: </span>{{review.submission.keywords}}</p>
+            <p>
+              <span class="field">Fullpaper: </span>
+              <i *ngIf="this.review.submission.fullPaper; then thenFullpaperBlock else elseFullpaperBlock">none</i>
+              <ng-template #thenFullpaperBlock> <span class="downloadSpan" (click)="downloadFullPaper(review)">
+                Click here to download</span></ng-template>
+              <ng-template #elseFullpaperBlock>none</ng-template>
+            </p>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-raised-button color="accent" (click)="openAddReviewDialog(review, i)">
+              Offer verdict
+            </button>
+            <mat-form-field style="margin-left: 20px">
+              <mat-label>Select an option</mat-label>
+              <mat-select [(value)]="localVerdicts[i]">
+                <mat-option value="WEAK_ACCEPT" style="color: darkseagreen;">Weak Accept</mat-option>
+                <mat-option value="ACCEPT" style="color: green;">Accepted</mat-option>
+                <mat-option value="STRONG_ACCEPT" style="color: darkgreen;">Strong Accept</mat-option>
+                <mat-option value="WEAK_REJECT" style="color: indianred;">Weak Reject</mat-option>
+                <mat-option value="REJECT" style="color: red;">Rejected</mat-option>
+                <mat-option value="STRONG_REJECT" style="color: darkred;">Strong Reject</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </mat-card-actions>
+        </mat-card>
+      </ng-container>
+    </div>
+  
+  </div>
+  
